--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome!!</h3>
 
-<p>Hello Folks! I am Sunny Bangale, a Bachelor of Engineering Graduate from Pune, India.
+<p>Hello Folks! I am Sunny Bangale, a graduate student pursuing Master of Science in Computer Science at University of Texas at Dallas, TX, USA.
 I believe in a balance of academics and non scholastic activities an important factor to enhance one's all round personality. Apart from being a developer and a programming enthusiast, I am a photographer, artist, singer and a music lover. View my projects on Github. Hope you like them.... </p>
 
 <h3>
@@ -58,12 +58,15 @@ I believe in a balance of academics and non scholastic activities an important f
 
 <p>Programming Languages: Core Java, J2EE, Python, C, C++ and Visual Basic.<br>
 Operating Systems: Windows and Linux<br>
-Web Technologies: HTML, AngularJs, JavaScript, JQuery, Java Server Pages and Servlets.<br>
+Web Technologies: HTML5, Bootstrap, AngularJs, JavaScript, JSP and Servlets.<br>
 Databases: Oracle, MySQL and PostgreSQL<br>
 Platforms: Thingworx, IBM Bluemix and Amazon Web Services<br>
+Devices: Raspberry Pi and Intel NUC<br>  
 Tools: Eclipse, Java NetBeans<br>
-Interests: Internet of Things, Artificial Intelligence, Machine Learning, Database Management Systems, Big Data, Information Security, Cloud Computing<br>
-Hardware Skills: Raspberry Pi               </p>
+Interests: Internet of Things, Artificial Intelligence, Machine Learning, Database Management Systems, Big Data, Cloud Computing<br>
+Applications: MS Word, MS PowerPoint, MS Excel and MS Outlook<br>
+Certifications: PTC-Thingworx Developer Associate 
+        </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
