--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@ Devices: Raspberry Pi and Intel NUC <br>
 Tools: Eclipse, Java NetBeans <br>
 Interests: Internet of Things, Artificial Intelligence, Machine Learning, Database Management Systems, Big Data, Cloud Computing<br>
 Applications: MS Word, MS PowerPoint, MS Excel and MS Outlook<br>
-Certifications: PTC-Thingworx Developer Associate
-        </p>
+Certifications: PTC-Thingworx Developer Associate     </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
